# ds4cg-job-analytics

./: .gitattributes  .gitconfig  .gitignore  .ruff.toml  README.md  SlurmGPU.ipynb  cpu_metrics.py  dev-requirements.txt  inefficient_pis.txt  inefficient_pis_a100.txt  inefficient_pis_h100.txt  inefficient_users.txt  inefficient_users_a100.txt  inefficient_users_h100.txt  metrics_a100_80GB.txt  metrics_h100_80GB.txt  mkdocs.yml  pyproject.toml  requirements.txt  zero_gpu_usage_list.py
.github/workflows/: unity-job-analytics.yml
baseline-scripts/: requirements.txt
docs/: README.md  about.md  analysis.md  contact.md  cpu_metrics.md  data-and-metrics.md  demo.md  faq.md  getting-started.md  index.md  notebooks  pair_plot.md  preprocess.md  zero_gpu_usage.md  zero_gpu_vram_usage.md
docs/analysis/: efficiency_analysis.md  etc_plot.md  frequency_analysis.md  visualization.md
docs/mvp-scripts/: cpu_metrics.md  gpu_metrics.md  zero_gpu_usage.md
docs/mvp_scripts/: cpu_metrics.md  gpu_metrics.md  zero_gpu_usage.md
docs/notebooks/: Basic Visualization.ipynb
docs/visualization/: columns.md  efficiency_metrics.md  models.md  visualization.md  visualize_columns.md
mvp-scripts/: README.md  zero_gpu_usage_list.py
mvp_scripts/: README.md  gpu_metrics.py  zero_gpu_usage_list.py
notebooks/: .gitattributes  A100_Analysis.ipynb  Basic Visualization.ipynb  Constraints_versus_Partitions.ipynb  ETC Plot.ipynb  Efficiency Analysis.ipynb  Frequency Analysis.ipynb  InefficientUsersReport.ipynb  Pair_Plots_Visualization.ipynb  ROC Plot.ipynb  Resource Hoarding.ipynb  SlurmGPU.ipynb  a100-analysis.ipynb  clustering_analysis.ipynb  efficiency_curves_demo.ipynb  main_db_test.ipynb  pair_plots.ipynb  test_zero_gpu_vram_usage_demo.ipynb  vram_efficiency_analysis_demo.ipynb  zero_gpu_metrics.ipynb
notebooks/Analysis/: No VRAM Use Analysis.ipynb  Requested and Used VRAM.ipynb
notebooks/analysis/: No VRAM Use Analysis.ipynb  Requested and Used VRAM.ipynb
notebooks/module_demos/: Attribute Visualization.ipynb  Efficiency Analysis.ipynb  Resource Hoarding.ipynb
notebooks/mvp/: SlurmGPU.ipynb
notebooks/snapshots/: partition_info.json
reports/: README.md  pi_group_report_template.qmd  ppt_user_report_template.qmd  styles.css  user_report_template.qmd
scripts/: README.md  TROUBLESHOOTING.md  check_report_setup.py  clean_notebook.sh  cpu_metrics.py  generate_pi_group_reports.py  generate_user_reports.py  gpu_metrics.py  strip_notebook_exclude.txt  zero_gpu_usage_list.py
src/: __init__.py
src/analysis/: FrequencyAnalysis.py  README_ETC.md  __init__.py  a100-analysis.ipynb  efficiency_analysis.py  efficiency_curves.py  etc_plot.py  frequency_analysis.py  hoarding.py  main_efficiency_analysis.py  pair_plots.py  pi_group_analysis.py  roc_plot.py  user_comparison.py  visualize_columns.py  vram_usage.py  zero_gpu_vram_usage.py
src/analytics/: DatabaseConnection.py
src/config/: __init__.py  constants.py  enum_constants.py  paths.py  remote_config.py
src/config/snapshots/: node_info.json  partition_info.json
src/database/: DatabaseConnection.py  __init__.py  database_connection.py
src/preprocess/: __init__.py  allocated_vram.py  constraints.py  errors.py  helper.py  preprocess.py  preprocessing.py
src/utilities/: __init__.py  load_and_preprocess_jobs.py  report_generation.py
src/utility/: __init__.py  load_processed_job.py
src/visualization/: __init__.py  columns.py  efficiency_metrics.py  models.py  roc_plot.py  time_series.py  visualization.py  visualize_columns.py
src/warnings/: __init__.py  analysis.py
tests/: DatabaseConnectionTest.py  conftest.py  test_allocated_vram.py  test_approx_allocated_vram.py  test_database_connection.py  test_example.py  test_get_vram_constraints.py  test_load_and_preprocess_jobs.py  test_load_and_preprocess_jobs.py.py  test_load_jobs_duck_db.py  test_load_processed_jobs_dataframe.py  test_preprocess.py  test_preprocess_origin.py  test_remote_config.py  test_requested_vram.py
tests/config/: test_enum_meta.py  test_remote_config.py
tests/mockData/: convert_csv_to_db.py  mock.csv  mock1.csv  mock1.db  mock2.csv  mock2.db  temp.py
tests/mock_data/: convert_csv_to_db.py  mock.csv  mock_new_format.csv
tests/preprocess/: test_approx_allocated_vram.py  test_load_and_preprocess_jobs.py  test_preprocess.py
